fixed register verification